Fix shrinking nicks in about pages on Safari

--- a/client/site/site.less
+++ b/client/site/site.less
@@ -1083,6 +1083,7 @@ body.error-page {
     }
 
     .nick {
+      flex-shrink: 0;
       align-self: flex-start;
       font-size: .85em;
       margin-right: .5em;
